@@ -644,6 +644,12 @@ build_control_widget(Jalv* jalv)
 				/* Group has changed */
 				LilvNode* groupName = lilv_world_get(
 					world, group, jalv->nodes.lv2_name, NULL);
+				if (!groupName) {
+					groupName = lilv_world_get(
+					        world, group, jalv->nodes.rdfs_label, NULL);
+				}
+
+				fprintf(stderr, "Group name: %p '%s'\n", groupName, lilv_node_as_string(groupName));
 				QGroupBox* groupBox = new QGroupBox(lilv_node_as_string(groupName));
 
 				groupLayout = new QHBoxLayout();
