@@ -1,8 +1,9 @@
 jalv (1.6.3) unstable;
 
   * Use screen refresh rate with Gtk3 and Qt5
+  * Support rdfs:label for port groups
 
- -- David Robillard <d@drobilla.net>  Sun, 03 Nov 2019 19:15:04 +0000
+ -- David Robillard <d@drobilla.net>  Sun, 10 Nov 2019 10:17:25 +0000
 
 jalv (1.6.2) stable;
 
